--- a/specs.html
+++ b/specs.html
@@ -50,7 +50,6 @@
 
   p { text-align: justify; }
 
-  /* ✅ Added dash class */
   .dash {
     margin: 0 0 12px;
     line-height: 1.6;
@@ -72,9 +71,11 @@
     <!-- INTRODUCTION -->
     <div class="section">
       <h2>1. Introduction</h2>
-      <p class="dash">In today’s world, the ability to manage health crises is very important. Pandemics affect many parts of life such as health, economy, and social structure. SimuCrisis is an educational simulation that helps people understand how different decisions during a pandemic can change the results. The project is developed with Unity and uses data and simple disease models to show how viruses spread and how management decisions work. Through this system, users can test ideas like lockdowns, vaccination plans, or increasing hospital capacity and see how these decisions affect infection rates and healthcare systems.</p>
+      <p class="dash">In today’s world, the ability to manage health crises is very important. Pandemics affect many parts of life such as health, economy, and social structure. SimuCrisis is an educational simulation that helps people understand how different decisions during a pandemic can change the results. SimuCrisis is developed with Unity. SimuCrisis uses data and simple disease models to show how viruses spread and how prevention policies about pandemics work. Through the system, users can test prevention policies like lockdowns, vaccination plans or increasing hospital capacity and see how these prevention policies affect infection rates and healthcare systems.</p>
 
-      <p class="dash">SimuCrisis gives users an interactive and visual way to explore crisis management. It provides graphs, heatmaps, and reports to show how the situation changes over time. The goal is to make learning about pandemics easier for educators, researchers, and policymakers. The project combines scientific models with an easy-to-use interface to support better understanding and awareness.</p>
+      <p class="dash">On the initial plan of the project, the development team included Virtual Reality support to provide a more engaging experience to users. After further evaluation, the development team decided to remove the VR component since the VR environment did not provide meaningful improvements to the project’s ultimate goals which are enhanced educational functions and usability. While it offered visual novelty, it did not change the educational or analytical value of the system and could have complicated usage for users without VR hardware. Therefore, SimuCrisis now focuses solely on the Unity-based desktop version, which provides the same level of interaction and accessibility in a more practical form.</p>
+
+      <p class="dash">SimuCrisis gives users an interactive and visual way to explore crisis management. The primary goal of SimuCrisis is to ease the learning process about pandemics for educators, researchers and policymakers. The project combines specific models with an interface to increase awareness and better understanding. SimuCrisis provides graphs, heatmaps and reports to users to provide better observation.</p>
     </div>
 
     <!-- DESCRIPTION -->
@@ -82,68 +83,68 @@
       <h3>1.1 Description</h3>
       <p class="dash">SimuCrisis is a digital simulation tool that lets users control and observe a virtual population during a pandemic. Users can change values like infection rate, recovery time, or medical capacity, and see the results instantly. They can apply actions such as closing schools, setting restrictions, or starting vaccination programs. The program then calculates the new situation and shows the effects visually in real time.</p>
 
-      <p class="dash">The purpose of SimuCrisis is to help users understand how different strategies work and what challenges decision-makers face. It focuses on being simple, flexible, and informative so that it can be used in both classrooms and research studies.</p>
+      <p class="dash">SimuCrisis’ purpose is to help users to understand how prevention strategies work about pandemics and simulate possible challenges decision-makers face. SimuCrisis focuses on being simple, flexible and informative. Hence, it can be used in both classrooms and research studies. The removal of VR ensures that SimuCrisis is easy to use for everyone. The removal of VR increases the hardware availability and its educational effectiveness.</p>
     </div>
 
     <!-- CONSTRAINTS -->
     <div class="section">
       <h3>1.2 Constraints</h3>
-      <p class="dash">The project must follow several important limits such as economic, environmental, social, political, ethical, health, manufacturability, and sustainability factors. These help make sure that the system is realistic, responsible, and long-lasting.</p>
+      <p class="dash">The project must follow several important limits such as economic, environmental, social, political, ethical, health, manufacturability, and sustainability factors. These factors which are listed below make the system more realistic, environment-friendly and durable in the long term.</p>
 
-      <p><b>Economic Constraints:</b> Developed with limited resources using Unity’s free version and open-source tools to minimize cost.</p>
-      <p><b>Environmental Constraints:</b> Optimized for local data processing to reduce energy use instead of relying on cloud computing.</p>
-      <p><b>Social Constraints:</b> Avoids misinformation and fear; focuses on educational and accessible design.</p>
-      <p><b>Political Constraints:</b> Uses fictional, neutral scenarios for learning purposes only.</p>
-      <p><b>Ethical Constraints:</b> Does not predict real-world outcomes or use personal data; only public/artificial datasets.</p>
-      <p><b>Health & Safety Constraints:</b> Not a diagnostic or medical tool; purely educational.</p>
-      <p><b>Manufacturability Constraints:</b> Modular structure allows future updates and web conversion.</p>
-      <p><b>Sustainability Constraints:</b> Built for reusability and future expansion for other crisis simulations.</p>
+      <p><b>Economic Constraints:</b> The project is developed with limited time and resources. Unity’s free version is used to avoid licensing costs. Free or open-source data and tools are preferred to keep the budget low. The team also focuses on performance optimization to make sure the program runs smoothly on normal computers.</p>
+
+      <p><b>Environmental Constraints:</b> Although SimuCrisis does not affect the environment directly, energy consumption is minimized. SimuCrisis is designed to use local data processing instead of heavy cloud services to reduce energy consumption.</p>
+
+      <p><b>Social Constraints:</b> Pandemics is a sensitive topic. Hence, SimuCrisis will avoid spreading misinformation. The project will use neutral, educational examples. SimuCrisis includes accessible and friendly design such as readable fonts, clear colors, and simple navigation.</p>
+
+      <p><b>Political Constraints:</b> Every country handles pandemics differently, so SimuCrisis does not copy or promote any real country’s policies. All situations are fictional and created for learning only.</p>
+
+      <p><b>Ethical Constraints:</b> The simulation is not a real-world prediction tool. It only helps users understand how pandemics behave under simple models. All data used is public or artificial. No personal or private health data is collected or shown.</p>
+
+      <p><b>Health and Safety Constraints:</b> SimuCrisis is not a medical or diagnostic program. It only presents educational visualizations about virus spread and recovery. It includes clear warnings so users know it is not for professional use.</p>
+
+      <p><b>Manufacturability Constraints:</b> To serve the purpose of adding new features and data to the system, SimuCrisis is designed with a modular structure. The initial release of SimuCrisis is focused on desktop computers.</p>
+
+      <p><b>Sustainability Constraints:</b> The main aspects of the program such as source code and data handling will follow clean and maintainable design. The SimuCrisis is built to include new features in the future and can be reused for similar crisis simulations.</p>
     </div>
 
     <!-- PROFESSIONAL & ETHICAL -->
     <div class="section">
       <h3>1.3 Professional and Ethical Issues</h3>
-      <p class="dash">SimuCrisis follows professional and ethical principles from ACM and IEEE codes, emphasizing honesty, fairness, and responsibility.</p>
-      <p class="dash"><b>Accuracy and Transparency:</b> Documentation explains all formulas and assumptions clearly.</p>
-      <p class="dash"><b>Fairness and Neutrality:</b> No cultural or political bias; designed purely for learning.</p>
-      <p class="dash"><b>Privacy and Data Use:</b> Only public or artificial data is used, no personal data collection.</p>
-      <p class="dash"><b>Professional Responsibility:</b> Developers ensure the tool functions as described without misleading users.</p>
-      <p class="dash"><b>Public Welfare:</b> The tool states clearly that it is not for medical or professional advice.</p>
+      <p class="dash">The SimuCrisis project and its development team will remain honest, fair and responsible in terms of data usage and system design.</p>
+
+      <p class="dash"><b>Accuracy and Transparency:</b> All of the data sources and assumptions will be clarified in the documentation. The purpose of clarification is to show calculation of results and limit boundaries.</p>
+
+      <p class="dash"><b>Fairness and Neutrality:</b> The project will not show any cultural or political bias. All simulations stay general and balanced, only for learning purposes.</p>
+
+      <p class="dash"><b>Privacy and Data Use:</b> Shared data from universal resources such as the World Health Organization will be used. SimuCrisis will not process or store any personal information.</p>
+
+      <p class="dash"><b>Professional Responsibility:</b> The development team will stay honest about the capabilities of the system and limits. The development team will ensure that simulation works as described and does not mislead users.</p>
+
+      <p class="dash"><b>Public Welfare:</b> Since the project includes health-related content, it clearly states that it is only an educational tool and not a replacement for medical or professional advice.</p>
     </div>
 
     <!-- REQUIREMENTS -->
     <div class="section">
       <h2>2. Requirements</h2>
+
       <h3>Functional Requirements</h3>
       <ul class="bul">
-        <li>Simulate virus spread using infection, recovery, and contact rates.</li>
-        <li>Allow users to apply strategies like lockdowns, vaccination, and healthcare investments.</li>
-        <li>Display real-time graphs for infections, deaths, and hospital use.</li>
-        <li>Enable users to compare different policy results.</li>
-        <li>Include example datasets from COVID-19 and H1N1.</li>
+        <li>The system should simulate virus spread based on infection, recovery, and contact rates.</li>
+        <li>It should let users apply strategies like lockdowns, vaccination, and healthcare investments.</li>
+        <li>It should display real-time graphs showing infections, deaths, and hospital usage.</li>
+        <li>It should allow users to compare different policy results.</li>
+        <li>It should include example data from past pandemics such as COVID-19 and H1N1.</li>
       </ul>
 
       <h3>Non-Functional Requirements</h3>
       <ul class="bul">
-        <li><b>Usability:</b> Clear, user-friendly interface for educators and students.</li>
-        <li><b>Performance:</b> Fast and responsive simulation.</li>
-        <li><b>Maintainability:</b> Modular and easy-to-update code.</li>
-        <li><b>Scalability:</b> Supports adding new data and features.</li>
-        <li><b>Reliability:</b> Produces consistent and correct results each run.</li>
+        <li><b>Usability:</b> The interface should be simple and clear for teachers and students.</li>
+        <li><b>Performance:</b> The program should run smoothly and respond quickly.</li>
+        <li><b>Maintainability:</b> The code should be modular and easy to update.</li>
+        <li><b>Scalability:</b> The system should allow adding new datasets and features.</li>
+        <li><b>Reliability:</b> Results should be correct and consistent each time the simulation runs.</li>
       </ul>
-    </div>
-
-    <!-- REFERENCES -->
-    <div class="section">
-      <h2>3. References</h2>
-      <ol class="bul">
-        <li>ACM Code of Ethics and Professional Conduct</li>
-        <li>IEEE Computer Society, Software Engineering Code of Ethics</li>
-        <li>IEEE Code of Ethics</li>
-        <li>Stanford Encyclopedia of Philosophy, Computer and Information Ethics</li>
-        <li>World Health Organization (WHO) Pandemic Data Archives</li>
-        <li>Centers for Disease Control and Prevention (CDC) COVID-19 Data Repository</li>
-      </ol>
     </div>
 
     <hr class="sep"/>
