--- a/index.html
+++ b/index.html
@@ -163,9 +163,14 @@
 
     <!-- FOOTER LINK TO REPORT -->
     <div class="footer">
-    
-      <a class="button-link" href="specs.html">Open Project Specifications Report</a>
-    </div>
+  <a class="button-link" href="specs.html">Open Project Specifications Report</a>
+
+  <br>
+
+  <!-- NEW BUTTON FOR ANALYSIS REPORT -->
+  <a class="button-link" href="analysis_report.html">Open Analysis Report – Group 46</a>
+</div>
+
   </div>
 </body>
 </html>
