--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 <title>SimuCrisis</title>
 
 <style>
-  /* --- Page background: real virus photo + soft white overlay --- */
   body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
 
     background:
-      /* Increased visibility: 0.10 for subtle virus look */
       linear-gradient(rgba(255,255,255,0.10), rgba(255,255,255,0.10)),
       url("https://images.unsplash.com/photo-1583324113626-70df0f4deaab?auto=format&fit=crop&w=1600&q=60")
       center/cover no-repeat fixed;
@@ -22,7 +20,6 @@
     backdrop-filter: blur(2px);
   }
 
-  /* --- Main white card --- */
   .container {
     max-width: 900px;
     margin: 40px auto;
@@ -32,30 +29,27 @@
     box-shadow: 0 6px 24px rgba(0,0,0,0.12);
   }
 
-  /* --- Headings in dark red --- */
   h1, h2 {
-    color: #8b0000; /* dark pandemic red */
+    color: #8b0000;
     font-family: Verdana, sans-serif;
     margin-top: 0;
   }
   h1 { text-align: center; margin-bottom: 8px; }
+
   h3 {
     color: #8b0000;
     margin-top: 0;
     font-weight: bold;
   }
 
-  /* Section style */
   .section {
     margin: 20px 0 10px;
     padding-bottom: 12px;
     border-bottom: 1px solid #e2e8f0;
   }
 
-  /* List style */
   ul { margin-top: 10px; }
 
-  /* Dash paragraphs */
   .dash {
     margin: 0 0 12px;
     line-height: 1.55;
@@ -64,13 +58,13 @@
     content: "– ";
   }
 
-  /* Footer link + button */
   .footer {
     text-align: center;
     margin-top: 25px;
     padding-top: 10px;
     border-top: 1px solid #e2e8f0;
   }
+
   .footer a {
     color: #8b0000;
     text-decoration: none;
@@ -78,6 +72,7 @@
   .footer a:hover {
     text-decoration: underline;
   }
+
   .button-link {
     display: inline-block;
     margin-top: 10px;
@@ -88,12 +83,12 @@
     text-decoration: none;
     font-weight: 600;
   }
+
   .button-link:hover {
     background: #8b0000;
     color: white;
   }
 
-  /* Responsive design */
   @media (max-width: 600px) {
     .container {
       margin: 20px 12px;
@@ -161,15 +156,12 @@
       </p>
     </div>
 
-    <!-- FOOTER LINK TO REPORT -->
+    <!-- FOOTER LINK TO REPORTS -->
     <div class="footer">
-  <a class="button-link" href="specs.html">Open Project Specifications Report</a>
-
-  <br>
-
-  <!-- NEW BUTTON FOR ANALYSIS REPORT -->
-  <a class="button-link" href="analysis_report.html">Open Analysis Report – Group 46</a>
-</div>
+      <a class="button-link" href="specs.html">Open Project Specifications Report</a>
+      <br>
+      <a class="button-link" href="analysis_report.html">Open Analysis Report – Group 46</a>
+    </div>
 
   </div>
 </body>
