--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="footer">
       <a class="button-link" href="specs.html">Open Project Specifications Report</a>
       <br>
-      <a class="button-link" href="analysis_report.html">Open Analysis Report – Group 46</a>
+      <a class="button-link" href="analysis_report.html">Open Analysis Report </a>
     </div>
 
   </div>
