--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <br>
       <a class="button-link" href="analysis_report.html">Open Analysis Report </a>
       <br>
-      <a class="button-link" href="design_report.html">Open High Level Design (PDF)</a>
+      <a class="button-link" href="design_report.html">Open High Level Design </a>
     </div>
 
   </div>
